--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 OOREP NEWS
 =-=-=-=-=-
 
+v0.3.1  under development
+
+- Bug fix: if initial case was too large, it couldn't be added to a file
+
 v0.3.0  Sun 02 Feb 2020 01:17:05 PM CET
 
 - Bug fix: available_reps wasn't called when drop-down was empty
