limit max number of symptoms and their length

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ v0.3.2  under development
 - Fix labelling of "redo search button" at top of screen
 - Remove deprecated method of Repertory() as it was no longer used
 - An attempt at helpful message when lookup yields too many results
+- Limit enterable search terms to at most 20 and length of 200 characters
+- Fix labelling of "redo search button" at top of page 
 - Fix Facebook-preview picture
 
 v0.3.1  Sat 08 Feb 2020 11:07:33 AM CET
