--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 OOREP NEWS
 =-=-=-=-=-
 
-v0.6.1  under development
+v0.6.1  Fri 30 Oct 2020 03:47:11 PM CET [tag: v.0.6.1]
 ------------------------------------------------------
 - Show multi-occurrences of remedies for entire search rather than for
   current page only
