Add release date and tag

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 OOREP NEWS
 =-=-=-=-=-
 
-v0.8.0  under development
+v0.8.0  Tue 26 Jan 2021 10:20:10 AM CET [tag: v0.8.0]
 -----------------------------------------------------
 - Main features (that made API changes necessary):
   - Repertorisation results can be shared via copy+paste of a link
