--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,27 @@
 OOREP NEWS
 =-=-=-=-=-
 
+Sun 20 Jun 2021 04:41:09 PM CEST          [tag: v0.11.0]
+--------------------------------------------------------
+- Main features:
+  - A "dark theme" for the UI is available
+
+- Minor improvements and changes:
+  - Subpages now have their own URL-path (e.g., /faq, /impressum,
+    etc.), which is also more SEO-friendly and makes the back-button
+    in the browser a lot more useful
+  - Switched to bootstrap v4.2.1 (from v4.1.3)
+  - Minor build.sbt clean-up (e.g., removed notify.js and old
+    jquery 2.2.4 dependencies)
+
+- Bug fixes:
+  - Make sure old entries in EmailHistory are really deleted
+  - Enforce unique names for creation of new files
+  - Edit-file dialog no longer "cuts off", if there are are many
+    cases associated with it
+  - After opening a case, multi-occurrences view is no longer
+    emptied, if it wasn't empty before
+
 v0.10.0  Fri 30 Apr 2021 08:22:12 PM CEST [tag: v0.10.0]
 --------------------------------------------------------
 - Main features:
