alphabetically sort small repertories

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 OOREP NEWS
 =-=-=-=-=-
 
+current development branch 'dev_X'
+--------------------------------------------------------
+- Bug fixes:
+  - Fix alphabetic sorting of rubrics in repertorisation view
+
 v0.11.1  Sun 18 Jul 2021 12:05:36 PM CEST [tag: v0.11.1]
 --------------------------------------------------------
 - Minor improvements and changes:
