--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,11 @@
 | |_| | |_| |  _ <| |___|  __/  | |\  | |___  \ V  V /  ___) |
  \___/ \___/|_| \_\_____|_|     |_| \_|_____|  \_/\_/  |____/ 
 
+v0.12.1                                under development
+--------------------------------------------------------
+- Minor improvements and changes:
+  - Move from Play 2.8.13 to 2.8.15
+  - Update site documentation
 
 v0.12.0  Sun Mar 27 08:07:19 PM CEST 2022 [tag: v0.12.0]
 --------------------------------------------------------
