--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ v0.12.1                                under development
   - Pressing 'redo' in repertory view no longer duplicates
     the elements in the weight dropdown
   - Fix display of "alt." remedy names in MM view
+  - Fix display (and test) of paginator
   - Update site documentation
 
 v0.12.0  Sun Mar 27 08:07:19 PM CEST 2022 [tag: v0.12.0]
