Add release date

--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@
 | |_| | |_| |  _ <| |___|  __/  | |\  | |___  \ V  V /  ___) |
  \___/ \___/|_| \_\_____|_|     |_| \_|_____|  \_/\_/  |____/ 
 
-v0.12.1                                under development
+v0.12.1  Tue 03 May 2022 07:00:51 PM CEST [tag: v0.12.1]
 --------------------------------------------------------
 - Minor improvements and changes:
   - Move from Play 2.8.13 to 2.8.15
